# fcp-pdf

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/fcp_pdf/: __main__.py  adapter.py  main.py
src/fcp_pdf/lib/: themes.py
src/fcp_pdf/model/: snapshot.py
src/fcp_pdf/server/: ops_annotate.py  ops_bookmark.py  ops_compose.py  ops_image.py  ops_link.py  ops_merge.py  ops_meta.py  ops_pages.py  ops_redact.py  ops_text.py  ops_watermark.py  queries.py  reference_card.py  resolvers.py  verb_registry.py
tests/: test_adapter.py  test_compose.py
