[project]
name = "fcp-pdf"
version = "0.1.0"
description = "PDF File Context Protocol — semantic PDF operations for LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fcp-core>=0.1.18",
    "fastmcp>=3.0",
    "pymupdf>=1.25",
]

# [tool.uv.sources]
# For local development, use `make link-py` instead of uncommenting:
# fcp-core = { path = "../fcp-core/python", editable = true }

[project.scripts]
fcp-pdf = "fcp_pdf.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fcp_pdf"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
